--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Guilherme</title>
 
   <base href="/" />
 
@@ -12,7 +12,7 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="icon" type="image/png" href="assets/icon/ts.png" />
 
   <!-- add to homescreen for ios -->
   <meta name="mobile-web-app-capable" content="yes" />
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root><h1>testando</h1></app-root>
 </body>
 
 </html>
